--- a/Lab4.ipynb
+++ b/Lab4.ipynb
@@ -59,19 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def enc(x):\n",
-    "    return \"\".join([chr(int(shiftLeft(bin(ord(i))[2:]),2)) for i in x])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -79,30 +67,37 @@
     {
      "data": {
       "text/plain": [
-       "\"%CgIMO'ogIMCgIOWOoKeCOQSUu\\r\""
+       "\"%CgIMO'ogIMCgIOWOoKeCOQSUu\""
       ]
      },
-     "execution_count": 25,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "def enc(x):\n",
+    "    return \"\".join([chr(int(shiftLeft(bin(ord(i))[2:]),2)) for i in x])\n",
     "\n",
-    "enc(\"2asdfg3wsdfasdgkgweraghijzF\")"
+    "enc(\"2asdfg3wsdfasdgkgweraghijz\")"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
+    "\n",
     "Write a script that decrypts a message coded by the method used in\n",
     "Project 6."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -110,44 +105,18 @@
     {
      "data": {
       "text/plain": [
-       "['2',\n",
-       " 'a',\n",
-       " 's',\n",
-       " 'd',\n",
-       " 'f',\n",
-       " 'g',\n",
-       " '3',\n",
-       " 'w',\n",
-       " 's',\n",
-       " 'd',\n",
-       " 'f',\n",
-       " 'a',\n",
-       " 's',\n",
-       " 'd',\n",
-       " 'g',\n",
-       " 'k',\n",
-       " 'g',\n",
-       " 'w',\n",
-       " 'e',\n",
-       " 'r',\n",
-       " 'a',\n",
-       " 'g',\n",
-       " 'h',\n",
-       " 'i',\n",
-       " 'j',\n",
-       " 'z',\n",
-       " '\\x0e']"
+       "'2asdfg3wsdfasdgkgweraghijz'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def decrypt(x):\n",
-    "    return [chr(int(shiftRight(bin(ord(i))[2:]), 2)) for i in x]\n",
-    "decrypt(\"%CgIMO'ogIMCgIOWOoKeCOQSUu\\r\")"
+    "    return \"\".join([chr(int(shiftRight(bin(ord(i))[2:]), 2)) for i in x])\n",
+    "decrypt(\"%CgIMO'ogIMCgIOWOoKeCOQSUu\")"
    ]
   },
   {
