--- a/Lab4.ipynb
+++ b/Lab4.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Problem 5:\n",
     "A bit shift is a procedure whereby the bits in a bit string are moved to the\n",
     "left or to the right. For example, we can shift the bits in the string 1011\n",
     "two places to the left to produce the string 1110. Note that the leftmost\n",
@@ -49,6 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Problem 6:\n",
     "Use the strategy of the decimal to binary conversion and the bit shift left\n",
     "operation defined in Project 5 to code a new encryption algorithm. The\n",
     "algorithm should add 1 to each character’s numeric ASCII value, convert\n",
@@ -83,14 +85,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "\n",
+    "Problem 7:\n",
     "Write a script that decrypts a message coded by the method used in\n",
     "Project 6."
    ]
