--- a/Assignment4.ipynb
+++ b/Assignment4.ipynb
@@ -205,6 +205,57 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "code = raw_input(\"Enter some data: \")\n",
+    "print code\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 1\n",
+      "4 2\n",
+      "6 3\n",
+      "8 4\n",
+      "10 5\n",
+      "12 6\n",
+      "14 7\n",
+      "16 8\n",
+      "18 9\n",
+      "20 10\n",
+      "22 11\n",
+      "24 12\n",
+      "26 13\n",
+      "28 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test():\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "    while i < 27:\n",
+    "        i = i + 2\n",
+    "        j = j + 1\n",
+    "        print i,j \n",
+    "test()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
