--- a/Assignment6.ipynb
+++ b/Assignment6.ipynb
@@ -175,64 +175,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 1, 1, 2, 1, 4, 6, 7, 9, 3, 8, 9, 8, 12, 8, 9, 2, 4, 9, 12, 15, 8, 5, 22, 20, 11, 2, 19, 14, 5, 25, 27, 20, 12, 29, 37, 12, 13, 40]\n"
+      "['__class__', '__cmp__', '__contains__', '__delattr__', '__delitem__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__gt__', '__hash__', '__init__', '__iter__', '__le__', '__len__', '__lt__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__setitem__', '__sizeof__', '__str__', '__subclasshook__', 'clear', 'copy', 'fromkeys', 'get', 'has_key', 'items', 'iteritems', 'iterkeys', 'itervalues', 'keys', 'pop', 'popitem', 'setdefault', 'update', 'values', 'viewitems', 'viewkeys', 'viewvalues']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[9,\n",
-       " 9,\n",
-       " 9,\n",
-       " 9,\n",
-       " 19,\n",
-       " 29,\n",
-       " 8,\n",
-       " 8,\n",
-       " 8,\n",
-       " 8,\n",
-       " 7,\n",
-       " 27,\n",
-       " 37,\n",
-       " 6,\n",
-       " 15,\n",
-       " 5,\n",
-       " 5,\n",
-       " 25,\n",
-       " 4,\n",
-       " 4,\n",
-       " 14,\n",
+       "[0,\n",
+       " 1,\n",
        " 3,\n",
-       " 13,\n",
        " 2,\n",
-       " 2,\n",
-       " 12,\n",
-       " 2,\n",
-       " 12,\n",
-       " 22,\n",
-       " 2,\n",
-       " 12,\n",
-       " 12,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
+       " 9,\n",
+       " 10,\n",
+       " 19,\n",
+       " 27,\n",
+       " 4,\n",
+       " 7,\n",
+       " 28,\n",
+       " 5,\n",
+       " 23,\n",
+       " 25,\n",
+       " 36,\n",
+       " 6,\n",
+       " 8,\n",
        " 11,\n",
+       " 12,\n",
+       " 16,\n",
        " 20,\n",
-       " 20,\n",
-       " 40]"
+       " 22,\n",
+       " 24,\n",
+       " 13,\n",
+       " 14,\n",
+       " 17,\n",
+       " 33,\n",
+       " 35,\n",
+       " 15,\n",
+       " 18,\n",
+       " 38,\n",
+       " 32,\n",
+       " 26,\n",
+       " 29,\n",
+       " 39,\n",
+       " 21,\n",
+       " 31,\n",
+       " 34,\n",
+       " 30,\n",
+       " 37]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,8 +241,12 @@
    "source": [
     "import random\n",
     "k = [random.randint(1,i+1) for i in range(40)]\n",
-    "print k\n",
-    "sorted(k, key=lambda x: x%10, reverse = True)\n"
+    "#print k\n",
+    "k = sorted(k, key=lambda x: x%10, reverse = True)\n",
+    "k = {i:random.randint(1,i+1) for i in range(40)}\n",
+    "\n",
+    "sorted(k, key=k.get )\n",
+    "\n"
    ]
   },
   {
